some word updates

--- a/analysis/utilization/static_trace.ipynb
+++ b/analysis/utilization/static_trace.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "import libraries"
+    "import required libraries"
    ]
   },
   {
