--- a/analysis/evaluation/evaluation_continuous.ipynb
+++ b/analysis/evaluation/evaluation_continuous.ipynb
@@ -457,7 +457,7 @@
     "            result_int3 = result_int2[result_int2[\"lambda\"] == lam]\n",
     "            utilization.append((lam, cluster_spec, round(float(result_int3[\"utilization\"].mean() * 100),2)))\n",
     "        \n",
-    "        utilization.sort()\n",
+    "        utilization.sort(reverse=True)\n",
     "\n",
     "        x = np.arange(len(utilization))\n",
     "        y = [x[2] for x in utilization]\n",
@@ -545,7 +545,7 @@
     "            avg_completion_time = int(sum([(float(r.strip().split(\" \")[0])/3600.0) for r in result_int3[\"average_completion_time\"]]) / 3.0)\n",
     "            completion_time.append((lam, cluster_spec, avg_completion_time))\n",
     "        \n",
-    "        completion_time.sort()\n",
+    "        completion_time.sort(reverse=True)\n",
     "\n",
     "        x = np.arange(len(completion_time))\n",
     "        y = [x[2] for x in completion_time]\n",
