--- a/analysis/utilization/continuous_trace.ipynb
+++ b/analysis/utilization/continuous_trace.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
     "            avg_completion_time = int(sum([(float(r.strip().split(\" \")[0])/3600.0) for r in result_int3[\"average_completion_time\"]]) / 3.0)\n",
     "            completion_time.append((lam, cluster_spec, avg_completion_time))\n",
     "        \n",
-    "        completion_time.sort()\n",
+    "        completion_time.sort(reverse=True)\n",
     "\n",
     "        x = np.arange(len(completion_time))\n",
     "        y = [x[2] for x in completion_time]\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
